[iOS] Assertion failure in Position::trailingWhitespacePosition while running imported/w3c/web-platform-tests/editing/other/edit-in-textcontrol-immediately-after-hidden.tentative.html https://bugs.webkit.org/show_bug.cgi?id=252191

Reviewed by Wenson Hsieh.

Check the precondition of Position::trailingWhitespacePosition before calling it.

* LayoutTests/platform/ios/TestExpectations:
* Source/WebCore/editing/DeleteSelectionCommand.cpp:
(WebCore::DeleteSelectionCommand::initializePositionData):

Canonical link: https://commits.webkit.org/261995@main